@@ -1,6 +1,7 @@
 v1.5.6
 In add listing form sub-categories are no longer showing in hierarchy for checkbox display type - FIXED
 Tick parent category should not tick sub-categories but untick parent category should untick sub-categories - CHANGED
+Filter added to modify unfavorite icon - ADDED 
 
 v1.5.5
 Added charset parameter to case conversion functions - ADDED
